--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@ h1 {
   margin: 0;
   color: aliceblue;
 }
+
+button{
+  border: none;
+  padding: 0.5rem 0.75rem;
+  border-radius: 4px;
+  margin: 1rem 0.5rem;
+}
+button:hover{
+  cursor: pointer;
+}
