--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@ h1 {
   margin: 0;
   color: aliceblue;
 }
+#map {
+  height: 400px;
+  /* The height is 400 pixels */
+  width: 100%;
+  /* The width is the width of the web page */
+}
+        
 .seccion{
   background-color: rgb(66, 129, 129);
   padding: 1rem;
